--- a/src/components/Pages/Listen/listen.css
+++ b/src/components/Pages/Listen/listen.css
@@ -8,11 +8,12 @@
 
 }
 p {
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 17px;
+    font-weight: 500;
     color: white;
     padding-top: 20px;
     padding-bottom: 40px;
+    line-height: 30px;
 }
 span {
     color: #FC0254;
