--- a/src/components/Pages/Subscription/subscription.css
+++ b/src/components/Pages/Subscription/subscription.css
@@ -2,4 +2,55 @@
     display: flex;
     background-color: #0A183D;
     justify-content: center;
+    gap: 200px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.subscrip h3 {
+    font-size: 60px;
+    font-weight: 650;
+    color: white;
+}
+.subscrip p {
+    color: #959BAB;
+}
+.subscrip h5 {
+    font-size: 35px;
+    color: #FC0254;
+    font-weight: 500;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.subscrip button {
+    padding: 20px;
+    width: 180px;
+    border-radius: 50px;
+    border: none;
+    cursor: pointer;
+    background-color: #FC0254;
+    color: white;
+}
+.check {
+    background-color: #1C294A;
+    padding: 50px;
+    width: 300px;
+    border-radius: 30px;
+}
+.play h6 {
+    color: white;
+    font-size: 18px;
+    font-weight: 500;
+}
+.play {
+     display: flex;
+     gap: 30px;
+     padding-left: 50px;
+     padding-top: 15px;
+     padding-bottom: 15px;
+}
+.play img {
+    height: 18px;
+}
+.play1 {
+    padding-top: 60px;
 }
