--- a/src/components/Pages/Listen/listen.css
+++ b/src/components/Pages/Listen/listen.css
@@ -38,6 +38,7 @@ h1 {
     border-radius: 50px;
     border: none;
     cursor: pointer;
+   
 }
 button:first-child {
     background-color: #FC0254;
@@ -47,3 +48,37 @@ button:last-child {
     background-color: #383B70;
     color: white;
 }
+
+button {
+    border: none;
+    text-align: center;    
+    cursor: pointer;
+    box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7);
+    transition: all 0.5s;
+  }
+  
+  button{
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  button:after {
+    content: '»';
+    position: absolute;
+    opacity: 0;  
+    top: 14px;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  button:hover{
+    padding-right: 24px;
+    padding-left:8px;
+  }
+  
+  button:hover:after {
+    opacity: 1;
+    right: 10px;
+  }
